build/log/idf_py_stderr_output_264642
Command: make -j 14 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c: In function 'dsp_process':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:77:17: error: unknown conversion type character '\x0a' in format [-Werror=format=]
   77 |         printf( "HR:%\n"PRIu32, ppg_val);
      |                 ^~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:77:17: error: too many arguments for format [-Werror=format-extra-args]
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:22:15: warning: unused variable 'test_freq' [-Wunused-variable]
   22 |         float test_freq = HR / 60.0f; // Hz
      |               ^~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:180: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
